<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@drawable/light_theme_background">

    <ImageButton
        android:id="@+id/link_to_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="To main page"
        android:src="@drawable/ic_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/edit"
        android:textColor="#170C10"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/link_to_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/link_to_order" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="320dp"
        android:layout_height="481dp"
        android:background="@drawable/rounded_rectangle_20_radius_shape"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        android:layout_marginTop="50dp">

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:background="@mipmap/ic_profile_picture_2_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/name"
            android:textColor="#170C10"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton9" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="138dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/user_name"
            android:textColor="#170C10"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView29"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView29" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/phone"
            android:textColor="#170C10"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView29"
            android:layout_marginTop="42dp"/>

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="138dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/user_phone"
            android:textColor="#170C10"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView30" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/email"
            android:textColor="#170C10"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView30"
            android:layout_marginTop="42dp"/>

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="138dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/user_email"
            android:textColor="#170C10"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView32" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/password"
            android:textColor="#170C10"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView32"
            android:layout_marginTop="42dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="138dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/user_password"
            android:textColor="#170C10"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView34"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView34"
            android:clickable="true"
            android:focusable="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="62dp"
        android:text="@string/save"
        android:theme="@style/SmallText"
        app:cornerRadius="30dp"
        android:backgroundTint="#FF222C"
        android:paddingStart="38dp"
        android:paddingEnd="38dp"
        android:paddingTop="2dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>