<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ScreenBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="360dp"
        android:layout_height="284dp"
        android:background="@drawable/rounded_bottom_rectangle_shape"
        style="@style/CardBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="180dp"
            android:layout_height="110dp"
            android:layout_marginTop="61dp"
            android:background="@drawable/ic_taco"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="62dp"
            android:layout_height="7dp"
            android:background="@drawable/underline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/link_to_login"
            app:layout_constraintStart_toStartOf="@+id/link_to_login" />
        <TextView
            android:id="@+id/link_to_login"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:fontFamily="@font/nunito"
            android:text="@string/login"
            style="@style/TextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="72dp"
            android:layout_marginBottom="11dp"/>

        <TextView
            android:id="@+id/link_to_reg"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunito"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/reg"
            style="@style/TextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="11dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView12"
        style="@style/HintTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:text="@string/phone"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"/>

    <EditText
        android:id="@+id/phoneInput"
        style="@style/TextColor"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:fontFamily="@font/nunito"
        android:hint="@string/user_phone"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        android:singleLine="true"
        android:autofillHints="phone"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/passwordInput"
        style="@style/TextColor"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:hint="@string/user_password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        android:layout_marginStart="36dp"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/textView14"
        style="@style/HintTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:text="@string/password"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneInput"
        android:layout_marginTop="35dp"
        android:layout_marginStart="40dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:width="115dp"
        android:height="40dp"
        android:backgroundTint="#FF222C"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/to_login"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>