<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@drawable/light_theme_background">

    <TextView
        android:id="@+id/heading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/settings"
        android:theme="@style/HeadingText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dark_mode_switch"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/dark_mode_switch"
        android:textColor="#170C10"
        android:textSize="20sp"
        android:theme="@style/Switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_text"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/vibration_switch"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/smartphone_vibration_switch"
        android:textColor="#170C10"
        android:textSize="20sp"
        android:theme="@style/Switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dark_mode_switch" />

    <TextView
        android:id="@+id/delete_button"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/delete_account"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:theme="@style/Switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vibration_switch"
        android:focusable="true"
        android:clickable="true"/>

    <Button
        android:id="@+id/back"
        android:layout_width="150dp"
        android:layout_height="36dp"
        android:backgroundTint="#FF222C"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center_horizontal"
        android:paddingTop="2dp"
        android:text="Назад"
        android:textSize="16sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="35dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>